Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-60200

QPainter warnings when running Gallery example with Material style

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.10.0 Alpha
    • 5.10
    • Quick: Controls 2
    • None
    • Windows 10
    • 19a73f2c5824406021e2ea81b83dcc649a285168

    Description

      Run the gallery with the Material style and you'll see warnings from QPainter:

      libpng warning: iCCP: known incorrect sRGB profile
      QPainter::begin: Paint device returned engine == 0, type: 3
      QPainter::setCompositionMode: Painter not active
      

      Attachments

        For Gerrit Dashboard: QTBUG-60200
        # Subject Branch Project Status CR V

        Activity

          People

            Unassigned Unassigned
            mitch_curtis Mitch Curtis
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes