QQuickXxxImage: don't attempt to colorize null images

QPainter threw such warnings:

    QPainter::begin: Paint device returned engine == 0, type: 3
    QPainter::setCompositionMode: Painter not active

Task-number: QTBUG-60200
Change-Id: I2cdedb7a547d0c069964929663297c969de9b2a7
Reviewed-by: Mitch Curtis <mitch.curtis@qt.io>